--- a/EntityEnginev2/EntityEnginev2.csproj
+++ b/EntityEnginev2/EntityEnginev2.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Components\ImageRender.cs" />
     <Compile Include="Components\Physics.cs" />
     <Compile Include="Components\Render.cs" />
+    <Compile Include="Components\Sound.cs" />
     <Compile Include="Components\TextRender.cs" />
     <Compile Include="Components\TileRender.cs" />
     <Compile Include="Components\Timer.cs" />
